fix: ajustes generales

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -602,5 +602,169 @@
     "textThree": "We appreciate your understanding and trust in our institution, and we are continuously working to provide an efficient and secure service.",
     "textFour": "We apologize for any inconvenience and are at your disposal to assist you."
   },
-  "cardNoba": "Card"
+  "cardNoba": "Card",
+  "textRequestCard": "Request your Noba card",
+  "selectTextRequestCard": "Choose the type of card you want to request: digital, physical or both.",
+  "digitalCard": "Digital card",
+  "physicalCard": "Physical card",
+  "next": "Next",
+  "dataUser": "User Data",
+  "typeCardRequest": "Type of card requested",
+  "nationality": "Nationality",
+  "selectNationality": "Select your nationality",
+  "dataExpiredId": "ID Expiration Date ",
+  "typeDomicile": "Type of domicile",
+  "numberDomicile": "Domicile number",
+  "selectTypeDomicile": "Select the type of address",
+  "dateBirth": "Birthdate",
+  "cardCenter": "Card Center",
+  "selectCard": "Select card",
+  "Cardholder": "Cardholder",
+  "cardType": "Card type",
+  "cardNumber": "Card number",
+  "expirationDate": "Expiration date",
+  "cardConfiguration": "Card Configuration",
+  "requestNewCard": "Request new card",
+  "errorToCopy": "Error to copy to clipboard",
+  "msnErrorCard": "You must select the type of card to advance",
+  "msnErrorSaveDataCard": "Error saving information",
+  "centerCard": "Center the card",
+  "labelHistorialCard": "History",
+  "labelPinChange": "Pin change",
+  "labelConfigCard": "Security settings",
+  "labelBlockCard": "Cancel card",
+  "labelQuestion": "Do you want to cancel this card?",
+  "labelQuestion2": "Please confirm that you wish to cancel this card.",
+  "labelRecargaCard": "Recharge card",
+  "labelHome": "Home",
+  "labelApartament": "Apartament",
+  "errorDocumentLabel": "Document expiration date is required",
+  "errorNationalityLabel": "The nationality field is required",
+  "errorNumberDomicileLabel": "Address number is required",
+  "requestQuote": "Request quote",
+  "ACTIVE": "Active",
+  "LOCKED": "Loked",
+  "CANCELLED": "cancelled",
+  "INACTIVE": "Inactive",
+  "DELETE": "delete",
+  "WAITING_DATA": "Paused",
+  "WAITING_ACTIVATION": "Waiting for activation",
+  "PURCHASE": "Purchase",
+  "REFUND": "Refund",
+  "PAYMENT": "Payment",
+  "FUNDING": "Funding",
+  "ATM_WITHDRAWAL": "Atm withdrawal",
+  "CASH_DISBURSEMENT": "Cash disbursement",
+  "ATM_DEPOSIT": "Atm deposit",
+  "ATM_TRANSFER": "Atm transfer",
+  "CASHBACK": "Cashback",
+  "FEE": "Fee",
+  "LOAN_DISBURSEMENT": "Loan disbursement",
+  "LOAN_REPAYMENT": "Loan repayment",
+  "COMMISSION": "Commission",
+  "TOP_UP": "Top up",
+  "WITHDRAWAL": "Withdrawal",
+  "INTEREST": "Interest",
+  "OUTGOING_TRANSFER": "Outgoing transfer",
+  "MOTHERS_MAIDEN_NAME": "Mother's maiden name",
+  "CITY_OF_BIRTH": "City of birth",
+  "GRADUATION_YEAR": "Graduation year",
+  "FIRST_CAR_MAKE_AND_MODEL": "First car make and model",
+  "FAVORITE_VACATION_DESTINATION": "Favorite vacation destination",
+  "CHILDHOOD_BEST_FRIEND": "Childhood best friend",
+  "FAVORITE_BOOK_AUTHOR": "Favorite book author",
+  "FAVORITE_MOVIE_DIRECTOR": "Favorite movie director",
+  "FAVORITE_SONG_ARTIST": "Favorite song artist",
+  "FAVORITE_FOOD_CUISINE": "Favorite food cuisine",
+  "FIRST_JOB_TITLE": "First job title",
+  "FAVORITE_SUBJECT_IN_SCHOOL": "Favorite subject in school",
+  "YEAR_JOINED_BANK": "Year joined bank",
+  "FAVORITE_SPORTS_TEAM": "Favorite sports team",
+  "CHILDHOOD_NICKNAME": "Childhood nickname",
+  "FAVORITE_COLOR": "Favorite color",
+  "FIRST_INVESTMENT_TYPE": "First investment type",
+  "FAVORITE_HOLIDAY": "Favorite holiday",
+  "FIRST_PET_NAME": "First pet name",
+  "FAVORITE_COMIC_BOOK_CHARACTER": "Favorite comic book character",
+  "FAVORITE_VIDEOGAME_PLATFORM": "Favorite videogame platform",
+  "FAVORITE_BOARDGAME": "Favorite boardgame",
+  "FIRST_TEACHER_NAME": "First teacher name",
+  "FAVORITE_MOVIE_GENRE": "Favorite movie genre",
+  "FAVORITE_BOOK_GENRE": "Favorite book genre",
+  "labelUploadDocument": "Upload document",
+  "labelUploadDocumentText": "Add your documents here and you can upload up to 3 files maximum",
+  "labelUploadDocumentText2": "Only supports .jpe .png and pdf (max, 800x400px)",
+  "labelDocumentFront": "Front ID document",
+  "labelDocumentBack": "Back of ID document",
+  "labelSelfieDocument": "Selfie Photo",
+  "SearchFiles": "Search files",
+  "verifyID1": "Identity",
+  "verifyID2": "Verification",
+  "document": "Document",
+  "selfie": "Selfie",
+  "textVerifyID1": "To ensure the security of your account, we need to verify",
+  "textVerifyID2": "your identity. Please follow these recommendations:",
+  "photoDocument": "Document Photo",
+  "documentBorroso": "Blurred Document",
+  "documentFlash": "With Flash",
+  "imgCortada": "Cut Image",
+  "textPhotoDocument1": "Upload a clear photo of the",
+  "textPhotoDocument2": "front and back",
+  "textPhotoDocument3": "of your",
+  "textPhotoDocument4": "ID",
+  "textAdmite": "Only supports JPG and PNG files, up to 8 MB.",
+  "txtRecomendation1": "Please follow these recommendations",
+  "txtRecomendation2": "to get a clear and sharp selfie:",
+  "txtList1": "Use a neutral background",
+  "txtList2": "It is recommended to use natural light",
+  "txtList3": "Do not wear a hat or glasses",
+  "txtList4": "Avoid being backlit",
+  "txtList5": "Take the photo at a frontal angle, maintaining",
+  "txtList51": "a relaxed and natural posture",
+  "txtList6": "Make sure your face is centered and well",
+  "txtList61": "focused in the photo frame",
+  "requestSent": "Request sent",
+  "stateEmail": "We have sent you an email to confirm your email address",
+  "backToTop": "Regresar al inicio",
+  "confirm": "Confirm",
+  "blockCardText": "Tell us what happened?",
+  "blockCardText2": "Once blocked it will be unusable, and you can request a new one.",
+  "blockCardText3": "Stolen",
+  "blockCardText4": "Loss",
+  "blockCardText5": "Description...",
+  "blockCardText6": "Block",
+  "textBlockCard": "Card lock",
+  "textUnblockCard": "Card unlock",
+  "selectQuestion": "Select a question",
+  "writeAnswer": "Write the answer",
+  "questionTitle": "Create your 3 security questions and answers for recovery.",
+  "createPin": "Create your new pin",
+  "createPinText": "Create your 4-digit pin for point of sale payments",
+  "cardApproved": "NOBA Mastercard approved",
+  "cardApprovedText": "Enter the last 4 digits of the card number",
+  "newPin": "New pin",
+  "enterPin": "Enter the pin",
+  "repeatPin": "Repeat the pin",
+  "confirmationModal": "You have activated your Physical Mastercard card",
+  "confirmationModalText": "You can now see your card in the card center and make transactions, click on the card center.",
+  "textBlockCardNew": "This card is currently blocked",
+  "textBlockCardNew2": "You can request a new one by clicking on",
+  "textBlockCardNew3": "Request new",
+  "textBlock": "Successful lock",
+  "textBlock2": "Your card has been permanently blocked, you will not be able to use it, you can click request a new one.",
+  "redirectActivationCard": "NOBA card activation",
+  "redirectActivationCardSubTitle": "Follow the steps to activate your card and start enjoying its benefits.",
+  "deleteCard": "Delete card",
+  "deleteVirtualCard": "Delete virtual card",
+  "deleteCardText": "Are you sure you want to delete this card?",
+  "pinNotMatch": "The pins do not match",
+  "questionCannotBeTheSame": "The questions cannot be the same",
+  "mustAnswerAllQuestions": "You must answer all the questions",
+  "pinLength": "The pin must be 4 digits long",
+  "cardPausa": "Paused card",
+  "cardPausa2": "You can reactivate it again from your card configuration options.",
+  "labelChangePin": "To change the pin of your physical card, you must follow the following steps:",
+  "labelChangePin2": "Enter your pre-created questions and answers into your card application",
+  "labelModalChangePin": "You have successfully changed your pin",
+  "labelModalChangePin2": "You can now use your card with your new pin"
 }
