--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -588,5 +588,168 @@
     "textThree": "Agradecemos su comprensión y confianza en nuestra institución, y trabajamos continuamente para ofrecer un servicio eficiente y seguro.",
     "textFour": "Nos disculpamos por los inconvenientes y estamos a su disposición para ayudarle."
   },
-  "cardNoba": "Tarjeta"
+  "cardNoba": "Tarjeta",
+  "cardCenter": "Centro de tarjetas",
+  "selectCard": "Seleccione una tarjeta",
+  "Cardholder": "Titular",
+  "cardType": "Tipo de tarjeta",
+  "cardNumber": "Número de tarjeta",
+  "expirationDate": "Vencimiento",
+  "cardConfiguration": "Configuración de tarjeta",
+  "requestNewCard": "Solicitar nueva tarjeta",
+  "errorToCopy": "Error al copiar al portapapeles",
+  "textRequestCard": "Solicita tu Tarjeta NOBA Mastercard",
+  "selectTextRequestCard": "Elige el tipo de tarjeta que deseas solicitar: digital, física o ambas.",
+  "digitalCard": "Virtual",
+  "physicalCard": "Física",
+  "next": "Siguiente",
+  "dataUser": "Datos de usuario",
+  "typeCardRequest": "Tipo de tarjeta solicitada",
+  "nationality": "Nacionalidad",
+  "selectNationality": "Seleccione su nacionalidad",
+  "dataExpiredId": "Fecha de vencimiento ID ",
+  "typeDomicile": "Tipo de domicilio",
+  "numberDomicile": "Número de domicilio",
+  "selectTypeDomicile": "Seleccione el tipo de domicilio",
+  "dateBirth": "Fecha de nacimiento",
+  "msnErrorCard": "Debe seleccionar el tipo de tarjeta para avanzar",
+  "msnErrorSaveDataCard": "Error al guardar la información",
+  "centerCard": "Centro de tarjetas",
+  "labelHistorialCard": "Historial",
+  "labelRecargaCard": "Recarga",
+  "labelPinChange": "Cambio de pin",
+  "labelConfigCard": "Configuración de seguridad",
+  "labelBlockCard": "Cancelar tarjeta",
+  "labelQuestion": "¿Quieres Cancelar esta Tarjeta?",
+  "labelQuestion2": "Porfavor confirma que deseas cancelar esta tarjeta.",
+  "labelHome": "Casa",
+  "labelApartament": "Apartamento",
+  "errorDocumentLabel": "Fecha de vencimiento del documento es requerida",
+  "errorNationalityLabel": "El campo de nacionalidad es requerido",
+  "errorNumberDomicileLabel": "Número de domicilio es requerido",
+  "requestQuote": "Solicitar cotización",
+  "labelUploadDocument": "Carga tus documentos",
+  "labelUploadDocumentText": "Agregue sus documentos aquí y podrá cargar hasta 3 archifvos como máximo ",
+  "labelUploadDocumentText2": "Solo admite .jpe .png y pdf (max, 800x400px)",
+  "labelDocumentFront": "Frente documento de identidad",
+  "labelDocumentBack": "Dorso documento de identidad",
+  "labelSelfieDocument": "Foto selfie",
+  "SearchFiles": "Buscar archivos",
+  "verifyID1": "Verificación de",
+  "verifyID2": "Identidad",
+  "document": "Documento",
+  "selfie": "Selfie",
+  "textVerifyID1": "Para garantizar la seguridad de tu cuenta, necesitamos verificar",
+  "textVerifyID2": "tu identidad. Por favor, sigue estas recomendaciones:",
+  "photoDocument": "Foto de Documento",
+  "documentBorroso": "Documento Borroso",
+  "documentFlash": "Con Flash",
+  "imgCortada": "Imagen Cortada",
+  "textPhotoDocument1": "Sube una foto clara del",
+  "textPhotoDocument2": "frente y dorso",
+  "textPhotoDocument3": "de tu",
+  "textPhotoDocument4": "documento de identidad.",
+  "textAdmite": "Solo admite archivos JPG y PNG, hasta 8 MB.",
+  "txtRecomendation1": "Por favor, sigue estas recomendaciones",
+  "txtRecomendation2": "para obtener una selfie clara y nítida:",
+  "txtList1": "Utilice un fondo neutro",
+  "txtList2": "Recomendable usar luz natural",
+  "txtList3": "No utilizar gorra ni lentes",
+  "txtList4": "Evita estar a contraluz",
+  "txtList5": "Tome la foto en ángulo frontal, manteniendo",
+  "txtList51": "una postura relajada y natural",
+  "txtList6": "Asegúrese de que su rostro esté centrado y bien",
+  "txtList61": "enfocado en el encuadre de la foto",
+  "ACTIVE": "Activa",
+  "LOCKED": "Bloqueada",
+  "CANCELLED": "Cancelada",
+  "INACTIVE": "Inactiva",
+  "DELETE": "Eliminar",
+  "WAITING_DATA": "Pausada",
+  "WAITING_ACTIVATION": "Esperando activación",
+  "PURCHASE": "Compra",
+  "REFUND": "Reembolso",
+  "PAYMENT": "Pago",
+  "FUNDING": "Fondos",
+  "ATM_WITHDRAWAL": "Retiro en cajero automático",
+  "CASH_DISBURSEMENT": "Desembolso en efectivo",
+  "ATM_DEPOSIT": "Deposito en cajero automático",
+  "ATM_TRANSFER": "Trasferencia en cajero automático",
+  "CASHBACK": "Reembolso",
+  "FEE": "Tarifa",
+  "LOAN_DISBURSEMENT": "Desembolso de préstamos",
+  "LOAN_REPAYMENT": "Reembolso de préstamos",
+  "COMMISSION": "Comisión",
+  "TOP_UP": "Recarga",
+  "WITHDRAWAL": "Retiro",
+  "INTEREST": "Interés",
+  "OUTGOING_TRANSFER": "Transferencia saliente",
+  "MOTHERS_MAIDEN_NAME": "Apellido de soltera de la madre",
+  "CITY_OF_BIRTH": "Ciudad de nacimiento",
+  "GRADUATION_YEAR": "Año de graduación",
+  "FIRST_CAR_MAKE_AND_MODEL": "Marca y modelo del primer coche",
+  "FAVORITE_VACATION_DESTINATION": "Destino de vacaciones favorito",
+  "CHILDHOOD_BEST_FRIEND": "Mejor amigo de la infancia",
+  "FAVORITE_BOOK_AUTHOR": "Autor de libro favorito",
+  "FAVORITE_MOVIE_DIRECTOR": "Director de cine favorito",
+  "FAVORITE_SONG_ARTIST": "Artista de canción favorito",
+  "FAVORITE_FOOD_CUISINE": "Cocina de comida favorita",
+  "FIRST_JOB_TITLE": "Título del primer trabajo",
+  "FAVORITE_SUBJECT_IN_SCHOOL": "Materia favorita en la escuela",
+  "YEAR_JOINED_BANK": "Año que se unió al banco",
+  "FAVORITE_SPORTS_TEAM": "Equipo deportivo favorito",
+  "CHILDHOOD_NICKNAME": "Apodo de la infancia",
+  "FAVORITE_COLOR": "Color favorito",
+  "FIRST_INVESTMENT_TYPE": "Primer tipo de inversión",
+  "FAVORITE_HOLIDAY": "Fiesta favorita",
+  "FIRST_PET_NAME": "Nombre de la primera mascota",
+  "FAVORITE_COMIC_BOOK_CHARACTER": "Personaje de cómic favorito",
+  "FAVORITE_VIDEOGAME_PLATFORM": "Plataforma de videojuegos favorita",
+  "FAVORITE_BOARDGAME": "Juego de mesa favorito",
+  "FIRST_TEACHER_NAME": "Nombre del primer profesor",
+  "FAVORITE_MOVIE_GENRE": "Género de película favorito",
+  "FAVORITE_BOOK_GENRE": "Género de libro favorito",
+  "requestSent": "Solicitud enviada",
+  "stateEmail": "We will notify you of the status of your request via email.",
+  "backToTop": "Back to top",
+  "confirm": "Confirm",
+  "blockCardText": "Cuentanos ¿qué pasó?",
+  "blockCardText2": "Una vez bloqueada será inutilizada, y podrás solicitar una nueva",
+  "blockCardText3": "Robada",
+  "blockCardText4": "Perdida",
+  "blockCardText5": "Descripción...",
+  "blockCardText6": "Bloquear",
+  "textBlockCard": "Bloquear tarjeta",
+  "textUnblockCard": "Desbloquear tarjeta",
+  "selectQuestion": "Seleccione una pregunta",
+  "writeAnswer": "Escribe tu respuesta",
+  "questionTitle": "Crea tus 3 preguntas y respuestas de seguridad para la recuperación",
+  "createPin": "Crea tu nuevo pin",
+  "createPinText": "Crea tu pin de 4 digitos para el uso de pagos puntos de venta",
+  "cardApproved": "Tarjeta NOBA Mastercard aprobada",
+  "cardApprovedText": "Ingresa los 4 digitos utlimo digitos del numero de la tarjeta",
+  "enterPin": "Ingresa el pin",
+  "repeatPin": "Repetir nuevo pin",
+  "confirmationModal": "Haz activado tu tarjeta Mastercard FIsica",
+  "confirmationModalText": "Ya puedes ver tu tarjeta en el centro de tarjeta y hacer transacciones, haz click en el centro de tarjetas.",
+  "textBlockCardNew": "Esta tarjeta está actualmente bloqueada",
+  "textBlockCardNew2": "Puedes solicitar una nueva haz click en",
+  "redirectActivationCard": "Activación de tarjeta NOBA",
+  "redirectActivationCardSubTitle": "Sigue los pasos para activar tu tarjeta y comienza a disfrutar de sus beneficios.",
+  "textBlockCardNew3": "Solicitar nueva",
+  "textBlock": "Bloqueo exitoso",
+  "textBlock2": "Su tarjeta ha sido bloqueada permanentemente, no podrás hacer uso de la misma, puedes hacer clic en solicitar una nueva.",
+  "deleteCard": "Eliminar tarjeta",
+  "deleteVirtualCard": "Eliminar tarjeta virtual",
+  "deleteCardText": "¿Estás seguro de que deseas eliminar esta tarjeta virtual?",
+  "pinNotMatch": "Los pines no coinciden",
+  "questionCannotBeTheSame": "Las preguntas no pueden ser iguales",
+  "mustAnswerAllQuestions": "Debes responder todas las preguntas",
+  "pinLength": "El pin debe tener 4 digitos",
+  "cardPausa": "Tarjeta pausada",
+  "cardPausa2": "Podrás reactivarla nuevamente desde las opciones de configuración de tu tarjeta.",
+  "labelChangePin": "Para hacer el cambio de pin de tu tarjeta fisica , debes seguir los siguientes pasos:",
+  "labelChangePin2": "Ingresa tus preguntas y respuestas creadas previamente en tu solicitud de tarjeta",
+  "labelModalChangePin": "Haz cambiado tu pin exitosamente",
+  "labelModalChangePin2": "Ya puedes hacer uso de tu tarjeta con tu nuevo pin"
 }
