fix: traducciones, imagenes

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -603,7 +603,7 @@
     "textFour": "We apologize for any inconvenience and are at your disposal to assist you."
   },
   "cardNoba": "Card",
-  "textRequestCard": "Request your Noba card",
+  "textRequestCard": "Request your BELOBABA card Mastercard",
   "selectTextRequestCard": "Choose the type of card you want to request: digital, physical or both.",
   "digitalCard": "Digital card",
   "physicalCard": "Physical card",
