--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -598,7 +598,7 @@
   "cardConfiguration": "Configuración de tarjeta",
   "requestNewCard": "Solicitar nueva tarjeta",
   "errorToCopy": "Error al copiar al portapapeles",
-  "textRequestCard": "Solicita tu Tarjeta NOBA Mastercard",
+  "textRequestCard": "Solicita tu Tarjeta BELOBABA Mastercard",
   "selectTextRequestCard": "Elige el tipo de tarjeta que deseas solicitar: digital, física o ambas.",
   "digitalCard": "Virtual",
   "physicalCard": "Física",
