--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -752,5 +752,19 @@
   "labelChangePin2": "Ingresa tus preguntas y respuestas creadas previamente en tu solicitud de tarjeta",
   "labelModalChangePin": "Haz cambiado tu pin exitosamente",
   "labelModalChangePin2": "Ya puedes hacer uso de tu tarjeta con tu nuevo pin",
-  "dontHaveTransactions": "No tienes transacciones en tu historial."
+  "dontHaveTransactions": "No tienes transacciones en tu historial.",
+  "months": {
+    "january": "Enero",
+    "february": "Febrero",
+    "march": "Marzo",
+    "april": "Abril",
+    "may": "Mayo",
+    "june": "Junio",
+    "july": "Julio",
+    "august": "Agosto",
+    "september": "Septiembre",
+    "october": "Octubre",
+    "november": "Noviembre",
+    "december": "Diciembre"
+  }
 }
