--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -766,5 +766,8 @@
     "october": "Octubre",
     "november": "Noviembre",
     "december": "Diciembre"
-  }
+  },
+  "description": "Descripción",
+  "transactionId": "ID de la transacción",
+  "date": "Fecha"
 }
