feat - add colors of belobaba

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -105,11 +105,11 @@
   "done": "Hecho",
   "internationalWire": "Wire Internacional",
   "domesticWire": "Wire Doméstico",
-  "betweenNOBACrypto": "Entre cuentas cripto NOBA",
+  "betweenNOBACrypto": "Entre cuentas cripto BELOBABA",
   "otherPlatformCrypto": "A otras plataformas Cripto",
-  "betweenNOBA": "Transferencia entre cuentas NOBA",
+  "betweenNOBA": "Transferencia entre cuentas BELOBABA",
   "withdrawFiatSelectMsg": "Seleccione transferencia nacional (dentro de los EE. UU.) o internacional (bancos internacionales)",
-  "withdrawCryptoSelectMsg": "Seleccione Crypto Transfer Interno (dentro de Noba) o Externo (Fuera de Noba)",
+  "withdrawCryptoSelectMsg": "Seleccione Crypto Transfer Interno (dentro de BELOBABA) o Externo (Fuera de BELOBABA)",
   "depositAccountUSD": "Los depósitos en esta cuenta deben ser realizados en Dólares Americanos",
   "depositAccountOther": "Los depósitos en esta cuenta podrán ser realizados desde otras monedas diferentes al dólar americano.",
   "depositNameOnBank": "Nombre en la cuenta bancaria",
@@ -125,7 +125,7 @@
   "statePlaceHolder": "Seleccionar estado",
   "cityPlaceHolder": "Seleccionar ciudad",
   "youBeneficiaries": "Tus beneficiarios",
-  "nobaBeneficiaryEmail": "Correo electrónico del beneficiario de Noba",
+  "nobaBeneficiaryEmail": "Correo electrónico del beneficiario de BELOBABA",
   "fullName": "Nombre completo",
   "somethingWentWrong": "Algo salio mal",
   "updatePasswordSuccessMessage": "Contrasena actualizada con exito",
@@ -224,7 +224,7 @@
   "namePdfDepositFiatDomestic": "Instrucciones de depósito doméstico ABA Fedwire",
   "namePdfDepositFiatInternational": "Instrucciones de depósito SWIFT",
   "depositBankName": "Nombre del banco a depositar",
-  "textNewWalletAddress": "En Noba solo se puede tener una billetera por activo asociado.",
+  "textNewWalletAddress": "En BELOBABA solo se puede tener una billetera por activo asociado.",
   "transactionHistory": "Histórico de transacciones",
   "extractGenerated": "Extracto Generado",
   "extracts": "Extractos",
@@ -297,21 +297,21 @@
   "yes": "Si",
   "no": "No",
   "recommendationSaveCodeRecovery": "Para activar el doble factor de autenticacion, por favor confirme que ha guardado los codigos de recuperacion.",
-  "twoFactorMessage": "La autenticación de dos factores (2FA) ahora está habilitada para su cuenta noba.cash",
+  "twoFactorMessage": "La autenticación de dos factores (2FA) ahora está habilitada para su cuenta BELOBABA",
   "twoFactorSecondMessage": "Has activado el doble factor de autenticación. Ahora utilizaras el código de tu aplicación de administración de contraseñas, en los siguientes momentos:",
-  "twoFactorActionOne": "Ingresar en tu cuenta noba.cash",
-  "twoFactorActionTwo": "Confirmar retiros desde tu cuenta noba.cash",
+  "twoFactorActionOne": "Ingresar en tu cuenta BELOBABA",
+  "twoFactorActionTwo": "Confirmar retiros desde tu cuenta BELOBABA",
   "twoFactorAlertTitle": "Active la autenticación de doble factor",
-  "twoFactorAlertMessage": "Por seguridad es necesario que active la autenticación de doble factor para confirmar retiros en tu cuenta noba.cash",
+  "twoFactorAlertMessage": "Por seguridad es necesario que active la autenticación de doble factor para confirmar retiros en tu cuenta BELOBABA",
   "validVerifyCode": "código de verificación no puede estar vacío",
   "passwordHelpText": "Introduce tu clave de acceso",
   "verifyCode": "Verificar el código",
   "enterCode": "Introduce el código de verificación",
   "verificationToken": "Verificando el token de solicitud de recuperación de la autenticación de doble factor",
   "verificationTokenForRecoveryTwoFactorSuccess": "La solicitud fue procesada con exito",
-  "verificationTokenForRecoveryTwoFactorSuccessMessage": "Ahora podras ingresar a tu cuenta noba.cash. Una vez que ingreses sigue los siguentes pasos:",
+  "verificationTokenForRecoveryTwoFactorSuccessMessage": "Ahora podras ingresar a tu cuenta BELOBABA. Una vez que ingreses sigue los siguentes pasos:",
   "verificationTokenForRecoveryTwoFactorStep1": "Has click en el boton de login",
-  "verificationTokenForRecoveryTwoFactorStep2": "Ingresa a tu cuenta noba.cash.",
+  "verificationTokenForRecoveryTwoFactorStep2": "Ingresa a tu cuenta BELOBABA.",
   "verificationTokenForRecoveryTwoFactorStep3": "Abre a tu perfil, en el apartado configuración.",
   "verificationTokenForRecoveryTwoFactorStep4": "Realiza el proceso de activación de la autenticación de dos factores.",
   "verificationTokenForRecoveryTwoFactorFail": "La verificación de la solicitud de recuperación de la autenticación de dos factores fallo.",
@@ -396,7 +396,7 @@
   "namePdfTransactionHistory": "historico-transacciones",
   "uploadDocumentsTitle": "Subir documentos",
   "subtitleUploadDocuments": "Puedes elegir entre 2 tipos de cuenta",
-  "onboardingTitle": "Crea una cuenta Noba, ¡es gratis!",
+  "onboardingTitle": "Crea una cuenta BELOBABA, ¡es gratis!",
   "personalAccount": "Cuenta personal",
   "businessAccount": "Cuenta de negocios",
   "titleNaturalPerson": "Personal",
@@ -443,7 +443,7 @@
   "intendedUseAccountLabel": "Cuenta de uso previsto",
   "intendedUseAccountHelpText": "Describa el uso para el que destinará la cuenta. Ejemplo: swap de cripto a fiat. Cuenta custodia de facturación. Cuenta para transacciones dentro de USA.",
   "anticipatedTypesAssetsLabel": "Tipos anticipados de activos",
-  "anticipatedTypesAssetsHelpText": "Coloque los activos que espera adquirir o vender en su wallet NOBA. Ejemplo: Bitcoin, Ethereum, Cardano, etc.",
+  "anticipatedTypesAssetsHelpText": "Coloque los activos que espera adquirir o vender en su wallet BELOBABA. Ejemplo: Bitcoin, Ethereum, Cardano, etc.",
   "anticipatedMonthlyCashVolumeLabel": "Volumen de efectivo mensual anticipado",
   "anticipatedMonthlyCashVolumeHelpText": "Coloque un monto promedio que espera tener en cuenta y mover mensualmente. Ejemplo: $5,000-$10,000; $10,000-$20,000; $20,000-$50,000; $50,000-$200,000; $200,000-$500,000; $500,000-$5,000,000; Por encima de $5,000,000.",
   "anticipatedTradingPatternsLabel": "Patrones comerciales anticipados",
@@ -553,7 +553,7 @@
   "errorToCopy": "Error al copiar al portapapeles",
   "companyType": "Tipo de empresa",
   "cardNoba": "Tarjeta",
-  "textRequestCard": "Solicita tu Tarjeta NOBA Mastercard",
+  "textRequestCard": "Solicita tu Tarjeta BELOBABA Mastercard",
   "selectTextRequestCard": "Elige el tipo de tarjeta que deseas solicitar: digital, física o ambas.",
   "digitalCard": "Virtual",
   "physicalCard": "Física",
@@ -768,7 +768,7 @@
   "authorized": "Autorizado",
   "posted": "Publicado",
   "typeWithdraw": "Elige el tipo de retiro",
-  "walletNob": "Entre billeteras nobas",
+  "walletNob": "Entre billeteras BELOBABA",
   "uniteState": "Estados Unidos",
   "withdrawText": "Antes de realizar una transacción o registrar a un nuevo beneficiario, asegúrese de contar con los requisitos.",
   "click": "Haz clic aquí",
