--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1029,5 +1029,6 @@
   "helpTextLastNameBeneficiary": "Si tiene dos apellidos, escriba los dos apellidos.",
   "helpTextAlias": "Identificador de la dirección de pago",
   "ifYouHaveTwoNames": "Si tienes dos nombres, por favor escribe los dos.",
-  "ifYouHaveTwoLastNames": "Si tienes dos apellidos, escribe los dos."
+  "ifYouHaveTwoLastNames": "Si tienes dos apellidos, escribe los dos.",
+  "VerifyBeneficiaryInformation": "Verifica la información del beneficiario y completa los campos restantes."
 }
