se corrigio los texto de la navegacion de retiro usa pc y movil

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -859,12 +859,12 @@
   "WalletUsdPanama": "USD Panama Wallet",
   "Confirm": "Confirm",
   "textWithdrawPanama": "Enter the amount to withdraw",
-  "typeWithdrawText": "ACH Domestic",
+  "typeWithdrawText": "Domestic",
   "textSelecTypeWithdraw": "Retirement Selection",
   "typeNetwork": "Network type",
   "textAddBeneficiary": "Complete the requested fields to add a new beneficiary.",
   "selectCountryButton": "Select the destination bank country",
-  "withdrawalSWIFT": "SWIFT Withdrawal",
+  "withdrawalSWIFT": "SWIFT",
   "typeWithdrawUsa": "Type of withdrawal",
   "selectBankDestinationText": "Select the destination bank",
   "textAddBeneficiaryUsa": "Fill out the following requested fields to add a new beneficiary.",
