--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -853,11 +853,11 @@
   "Confirm": "Confirmar",
   "textWithdrawPanama": "Escribe el monto a retirar",
   "textSelecTypeWithdraw": "Selección de retiro",
-  "typeWithdrawText": "Retiro doméstico",
+  "typeWithdrawText": "Doméstico",
   "typeNetwork": "Tipo de red",
   "textAddBeneficiary": "Complete los campos solicitados para agregar un nuevo beneficiario.",
   "selectCountryButton": "Selecciona el país del banco destino",
-  "withdrawalSWIFT": "Retiro SWIFT",
+  "withdrawalSWIFT": "SWIFT",
   "typeWithdrawUsa": "Tipo de retiro",
   "selectBankDestinationText": "Selecciona el banco de destino",
   "textAddBeneficiaryUsa": "Llena los siguientes campos solicitados para agregar un nuevo beneficiario.",
