fix: se realizaron cambios en el modal de crypto tanto en pc com en movil

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -774,7 +774,7 @@
   "authorized": "Authorized",
   "posted": "Posted",
   "typeWithdraw": "Choose the type of withdrawal",
-  "walletNob": "Between nobas wallets",
+  "walletNob": "Between BELOBABA wallets",
   "uniteState": "USA",
   "withdrawText": "Before making a transaction, make sure you have the following requirements:",
   "click": "Click here",
@@ -1040,6 +1040,25 @@
   "ifYouHaveTwoNames": "If you have two names, write both.",
   "ifYouHaveTwoLastNames": "If you have two last names, write both.",
   "VerifyBeneficiaryInformation": "Verify the beneficiary information and complete the remaining fields.",
-  "transactionId": "Transaction ID"
+  "transactionId": "Transaction ID",
+  "cardDeniedText": "Operation canceled, You already have a VIRTUAL card.",
+  "titleRequirementsOtherPlatforms": "Requirements to create a beneficiary for a cryptocurrency withdrawal to other platforms:",
+  "cryptocurrencySelection": "Cryptocurrency selection:",
+  "cryptocurrencySelectionText": "Choose the type of cryptocurrency from a drop-down menu.",
+  "beneficiaryDetails ": "Beneficiary details:",
+  "beneficiaryDetailsText1": " Beneficiary's first name (one or both names).",
+  "beneficiaryDetailsText2": "Beneficiary's last name (both last and last names if applicable).",
+  "beneficiaryDetailsText3": "Alias (optional).",
+  "walletAddressText": "Enter the address to which the cryptocurrency will be transferred.",
+  "countryOfResidenceBeneficiary": "Country of residence of the beneficiary",
+  "countryOfResidenceBeneficiaryText": "Specify through a drop-down menu.",
+  "RelationshipBeneficiary": "Relationship to the beneficiary:",
+  "RelationshipBeneficiaryText": "Select the connection (e.g. SIBL). (e.g. SIBLING - sibling).",
+  "typeBeneficiaryText": "Choose from the available options (e.g. “Other” - sibling). (e.g., “Other”).",
+  "titleRequirementsBetweenWallets": "Requirements for creating a beneficiary for a cryptocurrency withdrawal between BELOBABA accounts:",
+  "RequirementsBetweenWalletsText": "To create a beneficiary, you simply need to obtain the email of the person you wish to make the withdrawal to.",
+  "RequirementsEssentialText": "These requirements are essential to ensure the correct transfer of funds.",
+  "importantNoteText": "Before withdrawing cryptocurrencies, check the options and select the correct network. Consult the documentation of your wallet or exchange to ensure proper procedure; this may prevent the loss of your assets.",
+  "importantNote": "IMPORTANT NOTE: "
 }
 
