--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1032,5 +1032,23 @@
   "ifYouHaveTwoLastNames": "Si tienes dos apellidos, escribe los dos.",
   "VerifyBeneficiaryInformation": "Verifica la información del beneficiario y completa los campos restantes.",
   "description": "Descripción",
-  "transactionId": "ID de la transacción"
+  "transactionId": "ID de la transacción",
+  "titleRequirementsOtherPlatforms": "Requisitos para crear un beneficiario para un retiro de criptomonedas a otras plataformas:",
+  "cryptocurrencySelection": "Selección de criptomoneda:",
+  "cryptocurrencySelectionText": "Elegir el tipo de criptomoneda desde un menú desplegable.",
+  "beneficiaryDetails": "Datos del beneficiario:",
+  "beneficiaryDetailsText1": "Primer nombre del beneficiario (uno o ambos nombres).",
+  "beneficiaryDetailsText2": "Apellido del beneficiario (ambos apellidos si aplica).",
+  "beneficiaryDetailsText3": "Alias (opcional).",
+  "walletAddressText": "Ingresar la dirección a la que se transferirá la criptomoneda.",
+  "countryOfResidenceBeneficiary": "País de residencia del beneficiario",
+  "countryOfResidenceBeneficiaryText": "Especificar a través de un menú desplegable.",
+  "RelationshipBeneficiary": "Relación con el beneficiario:",
+  "RelationshipBeneficiaryText": "Seleccionar la conexión (por ejemplo, SIBLING - hermano/a).",
+  "typeBeneficiaryText": "Elegir entre las opciones disponibles (por ejemplo, Other - Otro).",
+  "titleRequirementsBetweenWallets": "Requisitos para crear un beneficiario para un retiro de criptomonedas entre cuentas BELOBABA:",
+  "RequirementsBetweenWalletsText": "Para crear un beneficiario, simplemente necesitas obtener el correo electrónico de la persona a la que deseas realizar el retiro.",
+  "RequirementsEssentialText": "Estos requisitos son esenciales para asegurar la correcta transferencia de fondos.",
+  "importantNoteText": "Antes de retirar criptomonedas, verifica las opciones y selecciona la red correcta. Consulta la documentación de tu wallet o exchange para asegurarte del procedimiento adecuado; esto puede evitar la pérdida de tus activos.",
+  "importantNote": "NOTA IMPORTANTE: "
 }
