fix:correccion de sintasis

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -776,7 +776,7 @@
   "CLEARED": "Liquidado",
   "DECLINED": "Rechazado",
   "AUTHORIZED": "Autorizado",
-  "REVERSED": "Revertido"
+  "REVERSED": "Revertido",
   "rechargeCard": "Recarga",
   "card": "Tarjeta",
   "blockCard": "Block card",
