fix: se justaron las imagenes de publicidad

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -931,9 +931,9 @@
   "applyToBusinessAlliesProgram": "Apply to the business allies program",
   "enterForSend": "Press Enter to send",
   "imgPublicity": {
-    "convert": "convert_en.png",
-    "help": "help_en.png",
-    "otc": "otc_en.png"
+    "convert": "convert_en_belobaba.jpeg",
+    "help": "help_en_belobaba.jpeg",
+    "otc": "otc_en_belobaba.jpeg"
   },
   "suspendedText": {
     "part1": "Your access to the Business Partners service has been disabled. This may be due to a number of reasons, and we apologize for any inconvenience this may cause you.",
