fix: text BELOBABA Card

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -546,7 +546,7 @@
   "soleCorp": "Corporation sole",
   "companyType": "Company type",
   "cardNoba": "Card",
-  "textRequestCard": "Request your Noba card",
+  "textRequestCard": "Request your BELOBABA card",
   "selectTextRequestCard": "Choose the type of card you want to request: digital, physical or both.",
   "digitalCard": "Digital card",
   "physicalCard": "Physical card",
